--- a/index.html
+++ b/index.html
@@ -530,8 +530,35 @@
                 </div>
 
                 {/* Mapa Informativo */}
-                <div className="mt-16 bg-white p-8 rounded-2xl shadow-lg max-w-4xl mx-auto">
+                <div className="mt-16 bg-white p-8 rounded-2xl shadow-lg max-w-6xl mx-auto">
                   <h3 className="text-2xl font-bold mb-6 text-center text-gray-800">Cómo Llegar</h3>
+                  
+                  {/* Mapa de Google */}
+                  <div className="mb-8 rounded-xl overflow-hidden shadow-lg">
+                    <iframe 
+                      src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15224.978794463033!2d-66.1568866!3d-17.4418902!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x93e3742c8ed91a17%3A0x9c37f74e2a8b5e0b!2sParque%20de%20las%20Familias!5e0!3m2!1ses!2sbo!4v1731445000000!5m2!1ses!2sbo"
+                      width="100%"
+                      height="450"
+                      style={{ border: 0 }}
+                      allowFullScreen=""
+                      loading="lazy"
+                      referrerPolicy="no-referrer-when-downgrade"
+                      title="Ubicación Parque de la Familia"
+                    ></iframe>
+                  </div>
+
+                  <div className="text-center mb-6">
+                    <a
+                      href="https://maps.app.goo.gl/kfgusWjDs64TmMDm7"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      className="inline-flex items-center gap-2 bg-gradient-to-r from-blue-500 to-blue-600 hover:from-blue-600 hover:to-blue-700 text-white px-6 py-3 rounded-full font-semibold transition-all shadow-lg hover:shadow-xl"
+                    >
+                      <i data-lucide="map-pin" className="w-5 h-5"></i>
+                      Abrir en Google Maps
+                    </a>
+                  </div>
+
                   <div className="grid md:grid-cols-2 gap-6">
                     <div>
                       <h4 className="font-bold mb-3 text-gray-700">En Transporte Público</h4>
