--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         background-position: 0% 50%;
       }
       50% {
-        background-position: 100% 50%;
+        background-position: 50% 50%;
       }
       100% {
-        background-position: 0% 50%;
+        background-position:80% 50%;
       }
     }
 
@@ -390,7 +390,7 @@
               <div className="container mx-auto px-4 text-center relative z-10">
                 <h1 className="text-5xl md:text-7xl font-bold mb-6 drop-shadow-2xl">Bienvenidos al Parque de la Familia</h1>
                 <p className="text-xl md:text-2xl mb-8 opacity-95 max-w-3xl mx-auto drop-shadow-lg">
-                  El espacio verde más grande de Cochabamba, donde la naturaleza y el entretenimiento se unen para crear momentos inolvidables
+                  El espacio recreacional más grande de Cochabamba, donde la naturaleza y el entretenimiento se unen para crear momentos inolvidables
                 </p>
                 <div className="flex flex-col sm:flex-row gap-4 justify-center items-center">
                   <button onClick={() => scrollToSection('atracciones')} className="bg-custom-turquoise hover:opacity-90 px-8 py-4 rounded-full text-lg font-bold transition-all shadow-xl hover:shadow-2xl hover:scale-105 text-white">
