--- a/index.html
+++ b/index.html
@@ -70,7 +70,13 @@
           precio: 'Incluido',
           duracion: '25 minutos',
           media: [
-            { type: 'image', url: 'https://www.civitatis.com/f/bolivia/cochabamba/espectaculo-luz-sonido-parque-familia-589x392.jpg' },
+            { type: 'image', url: 'aguas4.jpg' },
+            { type: 'image', url: 'aguas5.jpg' },
+            { type: 'image', url: 'aguas6.jpg' },
+            { type: 'image', url: 'aguas7.jpg' },
+            { type: 'image', url: 'aguas8.jpg' },
+            { type: 'image', url: 'aguas9.jpg' },
+            { type: 'image', url: 'aguas10.jpg' },
             { type: 'image', url: 'aguas2.jpg' },
             { type: 'image', url: 'aguas3.jpg' },
             { type: 'video', url: '/aguas.mp4' },
