--- a/index.html
+++ b/index.html
@@ -295,18 +295,18 @@
                   <button onClick={() => scrollToSection('atracciones')} className="bg-custom-turquoise hover:opacity-90 px-8 py-4 rounded-full text-lg font-bold transition-all shadow-xl hover:shadow-2xl hover:scale-105 text-white">Explorar Atracciones</button>
                   <button onClick={() => scrollToSection('horarios')} className="bg-transparent border-2 border-white text-white hover:bg-white hover:text-custom-purple px-8 py-4 rounded-full text-lg font-bold transition-all">Ver Horarios</button>
                 </div>
-                <div className="grid grid-cols-3 gap-8 max-w-3xl mx-auto mt-16">
-                  <div className="text-center backdrop-blur-md bg-white/20 rounded-xl p-4 border border-white/30">
-                    <div className="text-4xl font-bold mb-2">30+</div>
-                    <div className="opacity-90 text-sm">Hectáreas Verdes</div>
+                <div className="grid grid-cols-3 gap-3 sm:gap-8 max-w-3xl mx-auto mt-16">
+                  <div className="text-center backdrop-blur-md bg-white/20 rounded-xl p-3 sm:p-4 border border-white/30">
+                    <div className="text-2xl sm:text-4xl font-bold mb-1 sm:mb-2">30+</div>
+                    <div className="opacity-90 text-xs sm:text-sm">Hectáreas Verdes</div>
                   </div>
-                  <div className="text-center backdrop-blur-md bg-white/20 rounded-xl p-4 border border-white/30">
-                    <div className="text-4xl font-bold mb-2">8</div>
-                    <div className="opacity-90 text-sm">Atracciones</div>
+                  <div className="text-center backdrop-blur-md bg-white/20 rounded-xl p-3 sm:p-4 border border-white/30">
+                    <div className="text-2xl sm:text-4xl font-bold mb-1 sm:mb-2">8</div>
+                    <div className="opacity-90 text-xs sm:text-sm">Atracciones</div>
                   </div>
-                  <div className="text-center backdrop-blur-md bg-white/20 rounded-xl p-4 border border-white/30">
-                    <div className="text-4xl font-bold mb-2">100K+</div>
-                    <div className="opacity-90 text-sm">Visitantes/Año</div>
+                  <div className="text-center backdrop-blur-md bg-white/20 rounded-xl p-3 sm:p-4 border border-white/30">
+                    <div className="text-2xl sm:text-4xl font-bold mb-1 sm:mb-2">100K+</div>
+                    <div className="opacity-90 text-xs sm:text-sm">Visitantes/Año</div>
                   </div>
                 </div>
               </div>
@@ -456,21 +456,21 @@
                     </div>
                   </div>
                 </div>
-                <div className="bg-custom-purple text-white p-8 rounded-2xl shadow-xl mt-12 max-w-4xl mx-auto">
-                  <div className="flex items-center gap-4 mb-4">
-                    <i data-lucide="calendar" className="w-10 h-10"></i>
-                    <h3 className="text-2xl font-bold">Shows de Aguas Danzantes</h3>
+                <div className="bg-custom-purple text-white p-6 sm:p-8 rounded-2xl shadow-xl mt-12 max-w-4xl mx-auto">
+                  <div className="flex items-center gap-3 sm:gap-4 mb-4">
+                    <i data-lucide="calendar" className="w-8 h-8 sm:w-10 sm:h-10"></i>
+                    <h3 className="text-xl sm:text-2xl font-bold">Shows de Aguas Danzantes</h3>
                   </div>
-                  <p className="mb-4">Horarios especiales todos los días:</p>
-                  <div className="grid grid-cols-3 gap-4">
+                  <p className="mb-4 text-sm sm:text-base">Horarios especiales todos los días:</p>
+                  <div className="grid grid-cols-1 sm:grid-cols-3 gap-3 sm:gap-4">
                     {['18:00', '19:30', '21:00'].map((time, i) => (
-                      <div key={i} className="bg-white bg-opacity-20 rounded-lg p-4 text-center">
-                        <div className="text-3xl font-bold mb-1">{time}</div>
-                        <div className="text-sm">{i === 0 ? 'Primera' : i === 1 ? 'Segunda' : 'Función especial'} función</div>
+                      <div key={i} className="bg-white bg-opacity-20 rounded-lg p-3 sm:p-4 text-center">
+                        <div className="text-2xl sm:text-3xl font-bold mb-1">{time}</div>
+                        <div className="text-xs sm:text-sm">{i === 0 ? 'Primera' : i === 1 ? 'Segunda' : 'Función especial'} función</div>
                       </div>
                     ))}
                   </div>
-                  <div className="mt-4 text-sm text-center opacity-80">* Duración: 25 minutos • Sujeto a condiciones climáticas</div>
+                  <div className="mt-4 text-xs sm:text-sm text-center opacity-80">* Duración: 25 minutos • Sujeto a condiciones climáticas</div>
                 </div>
               </div>
             </section>
