--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
             </section>
 
             {lightboxOpen && (
-              <div className="fixed inset-0 z-50 bg-black bg-opacity-95 flex items-center justify-center" onClick={closeLightbox}>
+              <div className="fixed inset-0 z-50 bg-black bg-opacity-95 flex items-center justify-center p-4" onClick={closeLightbox}>
                 <button onClick={closeLightbox} className="absolute top-4 right-4 text-white hover:text-gray-300 transition-colors z-50">
                   <i data-lucide="x" className="w-10 h-10"></i>
                 </button>
@@ -395,24 +395,34 @@
                     </button>
                   </>
                 )}
-                <div className="max-w-7xl max-h-[90vh] w-full px-4" onClick={(e) => e.stopPropagation()}>
-                  {currentGallery[currentImageIndex] && currentGallery[currentImageIndex].type === 'video' ? (
-                    <div className="w-full aspect-video bg-black rounded-lg overflow-hidden">
-                      <video src={currentGallery[currentImageIndex].url} controls className="w-full h-full" autoPlay>
-                        Tu navegador no soporta el elemento de video.
-                      </video>
-                    </div>
-                  ) : (
-                    currentGallery[currentImageIndex] && (
-                      <img src={currentGallery[currentImageIndex].url} alt={`Media ${currentImageIndex + 1}`} className="w-full h-full object-contain rounded-lg" />
-                    )
-                  )}
+                <div className="w-full max-w-4xl mx-auto flex flex-col items-center" onClick={(e) => e.stopPropagation()}>
+                  <div className="w-full max-h-[75vh] flex items-center justify-center mb-4">
+                    {currentGallery[currentImageIndex] && currentGallery[currentImageIndex].type === 'video' ? (
+                      <div className="w-full max-w-3xl">
+                        <video src={currentGallery[currentImageIndex].url} controls className="w-full rounded-lg shadow-2xl" autoPlay>
+                          Tu navegador no soporta el elemento de video.
+                        </video>
+                      </div>
+                    ) : (
+                      currentGallery[currentImageIndex] && (
+                        <img 
+                          src={currentGallery[currentImageIndex].url} 
+                          alt={`Media ${currentImageIndex + 1}`} 
+                          className="max-w-full max-h-[75vh] w-auto h-auto object-contain rounded-lg shadow-2xl" 
+                        />
+                      )
+                    )}
+                  </div>
                   {currentGallery.length > 1 && (
-                    <div className="text-center mt-4">
-                      <p className="text-white text-lg">{currentImageIndex + 1} / {currentGallery.length}</p>
-                      <div className="flex justify-center gap-2 mt-4">
+                    <div className="text-center">
+                      <p className="text-white text-lg mb-3">{currentImageIndex + 1} / {currentGallery.length}</p>
+                      <div className="flex justify-center gap-2 flex-wrap max-w-md">
                         {currentGallery.map((item, index) => (
-                          <button key={index} onClick={() => setCurrentImageIndex(index)} className={`relative w-3 h-3 rounded-full transition-all ${index === currentImageIndex ? 'bg-white w-8' : 'bg-gray-500 hover:bg-gray-400'}`}>
+                          <button 
+                            key={index} 
+                            onClick={() => setCurrentImageIndex(index)} 
+                            className={`relative w-3 h-3 rounded-full transition-all ${index === currentImageIndex ? 'bg-white w-8' : 'bg-gray-500 hover:bg-gray-400'}`}
+                          >
                           </button>
                         ))}
                       </div>
