--- a/index.html
+++ b/index.html
@@ -93,15 +93,15 @@
           precio: 'Incluido',
           duracion: '25 minutos',
           media: [
-            { type: 'image', url: 'aguas4.jpg' },
-            { type: 'image', url: 'aguas5.jpg' },
-            { type: 'image', url: 'aguas6.jpg' },
+            { type: 'image', url: 'aguas15.jpg' },
+            { type: 'image', url: 'aguas13.jpeg' },
+            { type: 'image', url: 'aguas14.jpg' },
             { type: 'image', url: 'aguas7.jpg' },
             { type: 'image', url: 'aguas8.jpg' },
             { type: 'image', url: 'aguas9.jpg' },
             { type: 'image', url: 'aguas10.jpg' },
-            { type: 'image', url: 'aguas2.jpg' },
-            { type: 'image', url: 'aguas3.jpg' },
+            { type: 'image', url: 'aguas16.jpg' },
+            { type: 'image', url: 'aguas17.jpg' },
             { type: 'video', url: '/aguas.mp4' },
 
           ],
@@ -128,7 +128,7 @@
           whatsapp: WHATSAPP_NUMBER,
           color: 'purple'
         },
-        {
+        /*{
           id: 3,
           name: 'Ciclovía',
           icon: 'bike',
@@ -140,7 +140,7 @@
           media: [{ type: 'image', url: 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRHV0tbGiHIlCnczHQmb8lbeGgLMlvCe4j5Cg&s' }],
           whatsapp: WHATSAPP_NUMBER,
           color: 'turquoise'
-        },
+        },*/
         {
           id: 4,
           name: 'Áreas Verdes',
