--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           horarios: ['16:00 - 22:00'],
           precio: 'Incluido',
           duracion: 'Todo el día',
-          media: [{ type: 'image', url: 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSODsQyGMCzTskLjrSQya42jCX3HWIIvCT57g&s' }],
+          media: [{ type: 'image', url: 'area2.jpg' }],
           whatsapp: WHATSAPP_NUMBER,
           color: 'turquoise'
         },
