--- a/index.html
+++ b/index.html
@@ -519,57 +519,57 @@
                 {/* Cards de horarios */}
                 <div className="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-6xl mx-auto mb-12">
                   {/* Días de Semana */}
-                  <div className="bg-gradient-to-br from-[#37a9ad] to-[#2d8a8d] p-8 rounded-2xl shadow-xl">
-                    <div className="bg-white w-20 h-20 rounded-full flex items-center justify-center mx-auto mb-6 shadow-lg">
-                      <i data-lucide="sunrise" className="w-10 h-10 text-[#37a9ad]"></i>
+                  <div className="bg-gradient-to-br from-[#37a9ad] to-[#2d8a8d] p-6 rounded-2xl shadow-xl">
+                    <div className="bg-white w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-4 shadow-lg">
+                      <i data-lucide="sunrise" className="w-8 h-8 text-[#37a9ad]"></i>
                     </div>
-                    <h3 className="text-3xl font-bold text-center mb-6 text-white drop-shadow-lg">Días de Semana</h3>
-                    <div className="space-y-4">
-                      <div className="bg-white/95 backdrop-blur-sm rounded-xl p-5 shadow-lg">
-                        <div className="flex justify-between items-center">
-                          <span className="font-bold text-gray-800 text-lg">Martes - Viernes</span>
-                          <span className="text-[#37a9ad] font-bold text-2xl">16:00 - 22:00</span>
+                    <h3 className="text-2xl font-bold text-center mb-4 text-white drop-shadow-lg">Días de Semana</h3>
+                    <div className="space-y-3">
+                      <div className="bg-white/95 backdrop-blur-sm rounded-xl p-3 shadow-lg">
+                        <div className="flex justify-between items-center gap-2">
+                          <span className="font-semibold text-gray-800 text-sm whitespace-nowrap">Martes - Viernes</span>
+                          <span className="text-[#37a9ad] font-bold text-lg whitespace-nowrap">16:00 - 22:00</span>
                         </div>
                       </div>
-                      <div className="text-sm text-white text-center mt-4 font-medium bg-white/20 backdrop-blur-sm rounded-lg py-3 px-4">
+                      <div className="text-xs text-white text-center font-medium bg-white/20 backdrop-blur-sm rounded-lg py-2 px-3">
                         Ideal para caminatas y ejercicio
                       </div>
                     </div>
                   </div>
 
                   {/* Fines de Semana */}
-                  <div className="bg-gradient-to-br from-[#8f3a82] to-[#72316a] p-8 rounded-2xl shadow-xl">
-                    <div className="bg-white w-20 h-20 rounded-full flex items-center justify-center mx-auto mb-6 shadow-lg">
-                      <i data-lucide="sunset" className="w-10 h-10 text-[#8f3a82]"></i>
+                  <div className="bg-gradient-to-br from-[#8f3a82] to-[#72316a] p-6 rounded-2xl shadow-xl">
+                    <div className="bg-white w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-4 shadow-lg">
+                      <i data-lucide="sunset" className="w-8 h-8 text-[#8f3a82]"></i>
                     </div>
-                    <h3 className="text-3xl font-bold text-center mb-6 text-white drop-shadow-lg">Fines de Semana</h3>
-                    <div className="space-y-4">
-                      <div className="bg-white/95 backdrop-blur-sm rounded-xl p-5 shadow-lg">
-                        <div className="flex justify-between items-center">
-                          <span className="font-bold text-gray-800 text-lg">Sábado - Domingo</span>
-                          <span className="text-[#8f3a82] font-bold text-2xl">16:00 - 22:00</span>
+                    <h3 className="text-2xl font-bold text-center mb-4 text-white drop-shadow-lg">Fines de Semana</h3>
+                    <div className="space-y-3">
+                      <div className="bg-white/95 backdrop-blur-sm rounded-xl p-3 shadow-lg">
+                        <div className="flex justify-between items-center gap-2">
+                          <span className="font-semibold text-gray-800 text-sm whitespace-nowrap">Sábado - Domingo</span>
+                          <span className="text-[#8f3a82] font-bold text-lg whitespace-nowrap">16:00 - 22:00</span>
                         </div>
                       </div>
-                      <div className="text-sm text-white text-center mt-4 font-medium bg-white/20 backdrop-blur-sm rounded-lg py-3 px-4">
+                      <div className="text-xs text-white text-center font-medium bg-white/20 backdrop-blur-sm rounded-lg py-2 px-3">
                         Con eventos especiales
                       </div>
                     </div>
                   </div>
 
                   {/* Feriados */}
-                  <div className="bg-gradient-to-br from-[#37a9ad] to-[#2d8a8d] p-8 rounded-2xl shadow-xl">
-                    <div className="bg-white w-20 h-20 rounded-full flex items-center justify-center mx-auto mb-6 shadow-lg">
-                      <i data-lucide="calendar-check" className="w-10 h-10 text-[#37a9ad]"></i>
+                  <div className="bg-gradient-to-br from-[#37a9ad] to-[#2d8a8d] p-6 rounded-2xl shadow-xl">
+                    <div className="bg-white w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-4 shadow-lg">
+                      <i data-lucide="calendar-check" className="w-8 h-8 text-[#37a9ad]"></i>
                     </div>
-                    <h3 className="text-3xl font-bold text-center mb-6 text-white drop-shadow-lg">Feriados</h3>
-                    <div className="space-y-4">
-                      <div className="bg-white/95 backdrop-blur-sm rounded-xl p-5 shadow-lg">
-                        <div className="flex justify-between items-center">
-                          <span className="font-bold text-gray-800 text-lg">Martes - Domingo</span>
-                          <span className="text-[#37a9ad] font-bold text-2xl">16:00 - 22:00</span>
+                    <h3 className="text-2xl font-bold text-center mb-4 text-white drop-shadow-lg">Feriados</h3>
+                    <div className="space-y-3">
+                      <div className="bg-white/95 backdrop-blur-sm rounded-xl p-3 shadow-lg">
+                        <div className="flex justify-between items-center gap-2">
+                          <span className="font-semibold text-gray-800 text-sm whitespace-nowrap">Martes - Domingo</span>
+                          <span className="text-[#37a9ad] font-bold text-lg whitespace-nowrap">16:00 - 22:00</span>
                         </div>
                       </div>
-                      <div className="text-sm text-white text-center mt-4 font-medium bg-white/20 backdrop-blur-sm rounded-lg py-3 px-4">
+                      <div className="text-xs text-white text-center font-medium bg-white/20 backdrop-blur-sm rounded-lg py-2 px-3">
                         Horario extendido con eventos especiales
                       </div>
                     </div>
