--- a/index.html
+++ b/index.html
@@ -834,7 +834,7 @@
                   <div>
                     <h4 className="font-bold mb-4">Atracciones Destacadas</h4>
                     <ul className="space-y-2 text-sm text-gray-400">
-                      {['Aguas Danzantes', 'Juegos Infantiles', 'Ciclovía', 'Eventos Culturales'].map((item, i) => (
+                      {['Aguas Danzantes', 'Juegos Infantiles', 'Eventos Culturales'].map((item, i) => (
                         <li key={i}>{item}</li>
                       ))}
                     </ul>
