--- a/index.html
+++ b/index.html
@@ -89,19 +89,21 @@
           icon: 'waves',
           description: 'Espectáculo único de agua, luz y música que cautiva a toda la familia',
           details: 'Disfruta de un show sincronizado con chorros de agua de hasta 50 metros de altura, acompañados de música y efectos de iluminación LED que crean un espectáculo mágico.',
-          horarios: ['18:00', '19:30', '21:00'],
+          horarios: ['22:00', '21:00'],
           precio: 'Incluido',
           duracion: '25 minutos',
           media: [
-            { type: 'image', url: 'aguas15.jpg' },
-            { type: 'image', url: 'aguas13.jpeg' },
-            { type: 'image', url: 'aguas14.jpg' },
+            { type: 'image', url: 'aguas26.jpg' },
+            { type: 'image', url: 'aguas20.jpg' },
+            { type: 'image', url: 'aguas21.jpg' },
+            { type: 'image', url: 'aguas18.jpg' },
             { type: 'image', url: 'aguas7.jpg' },
             { type: 'image', url: 'aguas8.jpg' },
-            { type: 'image', url: 'aguas9.jpg' },
+            { type: 'image', url: 'aguas15.jpg' },
             { type: 'image', url: 'aguas10.jpg' },
             { type: 'image', url: 'aguas16.jpg' },
             { type: 'image', url: 'aguas17.jpg' },
+            { type: 'image', url: 'aguas23.jpg' },
             { type: 'video', url: '/aguas.mp4' },
 
           ],
@@ -114,7 +116,7 @@
           icon: 'baby',
           description: 'Área segura con juegos para niños de todas las edades',
           details: 'Zona equipada con toboganes, columpios, sube y baja, y estructuras de escalada diseñadas para el entretenimiento seguro de los más pequeños.',
-          horarios: ['16:00 - 22:00'],
+          horarios: ['14:00 - 22:00'],
           precio: 'Incluido',
           duracion: 'Todo el día',
           media: [{ type: 'image', url: '/Juegos.jpg' },
@@ -147,10 +149,15 @@
           icon: 'tree-pine',
           description: 'Espacios naturales para picnic y relajación',
           details: 'Amplias zonas con césped, árboles nativos y bancos para disfrutar en familia. Perfecto para picnics, juegos al aire libre y conexión con la naturaleza.',
-          horarios: ['16:00 - 22:00'],
+          horarios: ['14:00 - 22:00'],
           precio: 'Incluido',
           duracion: 'Todo el día',
-          media: [{ type: 'image', url: 'area2.jpg' }],
+          media: [{ type: 'image', url: 'areapremiun.jpg' },
+            { type: 'image', url: 'area3.jpg' },
+            { type: 'image', url: 'area6.jpg' },
+            { type: 'image', url: 'area7.jpg' },
+
+          ],
           whatsapp: WHATSAPP_NUMBER,
           color: 'turquoise'
         },
@@ -158,14 +165,12 @@
           id: 5,
           name: 'Zona Snacks',
           icon: 'coffee',
-          description: 'Variedad de opciones culinarias para todos los gustos',
-          details: 'Food trucks y puestos de comida con opciones locales e internacionales. Desde salteñas hasta hamburguesas, helados y bebidas refrescantes.',
-          horarios: ['16:00 - 22:00'],
+          description: 'Snacks variados para picar durante el evento',
+          details: 'Variedad de opciones de snacks y bebidas. Encuentra lo que necesites para disfrutar mientras participas en las actividades.',
+          horarios: ['14:00 - 22:00'],
           precio: 'Variable',
           duracion: 'A elección',
-          media: [{ type: 'image', url: 'Snacksjpg.jpg' },
-
-          ],
+          media: [{ type: 'image', url: 'Snacksjpg.jpg' },{ type: 'image', url: 'snakc2.jpg' }],
           whatsapp: WHATSAPP_NUMBER,
           color: 'purple'
         },
@@ -179,8 +184,8 @@
           precio: 'Variable',
           duracion: 'Variable',
           media: [{ type: 'image', url: 'https://media-cdn.tripadvisor.com/media/photo-s/0e/44/26/e7/photo0jpg.jpg' },
-          { type: 'video', url: '/eventos.mp4' },
-          { type: 'image', url: '/evento2.webp' }
+          { type: 'image', url: '/evento2.webp' }, { type: 'image', url: '/evento4.jpg' }, { type: 'video', url: '/eventos.mp4' },
+
           ],
           whatsapp: WHATSAPP_NUMBER,
           color: 'purple'
@@ -189,12 +194,20 @@
           id: 7,
           name: 'Senderos Ecológicos',
           icon: 'tree-pine',
-          description: 'Caminatas guiadas por la naturaleza',
-          details: 'Rutas señalizadas que recorren los diferentes ecosistemas del parque. Aprende sobre flora y fauna local mientras disfrutas del aire libre.',
-          horarios: ['16:00 - 22:00'],
+          description: 'Caminatas por la naturaleza',
+          details: 'Rutas que recorren los diferentes ecosistemas del parque. Aprende sobre flora y fauna local mientras disfrutas del aire libre.',
+          horarios: ['14:00 - 22:00'],
           precio: 'Incluido',
           duracion: '1-2 horas',
-          media: [{ type: 'image', url: 'senderos.jpg' }],
+          media: [{ type: 'image', url: 'senderos.jpg' },
+
+            { type: 'image', url: 'sendero3.jpg' },
+            { type: 'image', url: 'sendero4.jpg' },
+            { type: 'image', url: 'sendero5.jpg' },
+            { type: 'image', url: 'sendero6.jpg' },
+             { type: 'image', url: 'sendero7.jpg' },
+             { type: 'image', url: 'sendero8.jpg' },
+          ],
           whatsapp: WHATSAPP_NUMBER,
           color: 'turquoise'
         },
@@ -207,9 +220,30 @@
           horarios: ['20:00'],
           precio: 'Incluido',
           duracion: '2 horas',
-          media: [{ type: 'image', url: '/cine.jpg' }],
+          media: [{ type: 'image', url: '/cine.jpg' }, { type: 'image', url: '/cine2.jpg' }],
           whatsapp: WHATSAPP_NUMBER,
           color: 'purple'
+        },
+        {
+          id: 9,
+          name: 'Actividades Especiales',
+          icon: 'sparkles',
+          description: 'Eventos temáticos en fechas especiales',
+          details: 'Durante el año realizamos actividades especiales según la fecha: Día del Peatón con juegos al aire libre, Día del Niño con diversión garantizada, Navidad con celebraciones festivas y nuestra popular Fiesta de Espumas que todos esperan. Mantente atento a nuestras redes para conocer las próximas fechas.',
+          horarios: ['Según evento'],
+          precio: 'Variable',
+          duracion: 'Variable',
+          media: [{ type: 'image', url: '/fiestaespuma.jpg' },
+          { type: 'image', url: '/espuma2.png' },
+          { type: 'image', url: '/espuma3.png' },
+          { type: 'image', url: '/espuma5.jpg' },
+          { type: 'image', url: '/espuma4.png' },
+          { type: 'image', url: '/actividad2.jpg' },
+          { type: 'image', url: '/actividad3.jpg' },
+          { type: 'image', url: '/actividad4.jpg' },
+          ],
+          whatsapp: WHATSAPP_NUMBER,
+          color: 'orange'
         }
       ];
 
@@ -324,7 +358,7 @@
                     <div className="opacity-90 text-xs sm:text-sm">Hectáreas Verdes</div>
                   </div>
                   <div className="text-center backdrop-blur-md bg-white/20 rounded-xl p-3 sm:p-4 border border-white/30">
-                    <div className="text-2xl sm:text-4xl font-bold mb-1 sm:mb-2">7</div>
+                    <div className="text-2xl sm:text-4xl font-bold mb-1 sm:mb-2">8</div>
                     <div className="opacity-90 text-xs sm:text-sm">Atracciones</div>
                   </div>
                   <div className="text-center backdrop-blur-md bg-white/20 rounded-xl p-3 sm:p-4 border border-white/30">
@@ -528,7 +562,7 @@
                       <div className="bg-white/95 backdrop-blur-sm rounded-xl p-3 shadow-lg">
                         <div className="flex justify-between items-center gap-2">
                           <span className="font-semibold text-gray-800 text-sm whitespace-nowrap">Martes - Viernes</span>
-                          <span className="text-[#37a9ad] font-bold text-lg whitespace-nowrap">16:00 - 22:00</span>
+                          <span className="text-[#37a9ad] font-bold text-lg whitespace-nowrap">14:00 - 22:00</span>
                         </div>
                       </div>
                       <div className="text-xs text-white text-center font-medium bg-white/20 backdrop-blur-sm rounded-lg py-2 px-3">
@@ -547,7 +581,7 @@
                       <div className="bg-white/95 backdrop-blur-sm rounded-xl p-3 shadow-lg">
                         <div className="flex justify-between items-center gap-2">
                           <span className="font-semibold text-gray-800 text-sm whitespace-nowrap">Sábado - Domingo</span>
-                          <span className="text-[#8f3a82] font-bold text-lg whitespace-nowrap">16:00 - 22:00</span>
+                          <span className="text-[#8f3a82] font-bold text-lg whitespace-nowrap">14:00 - 22:00</span>
                         </div>
                       </div>
                       <div className="text-xs text-white text-center font-medium bg-white/20 backdrop-blur-sm rounded-lg py-2 px-3">
@@ -566,7 +600,7 @@
                       <div className="bg-white/95 backdrop-blur-sm rounded-xl p-3 shadow-lg">
                         <div className="flex justify-between items-center gap-2">
                           <span className="font-semibold text-gray-800 text-sm whitespace-nowrap">Martes - Domingo</span>
-                          <span className="text-[#37a9ad] font-bold text-lg whitespace-nowrap">16:00 - 22:00</span>
+                          <span className="text-[#37a9ad] font-bold text-lg whitespace-nowrap">14:00 - 22:00</span>
                         </div>
                       </div>
                       <div className="text-xs text-white text-center font-medium bg-white/20 backdrop-blur-sm rounded-lg py-2 px-3">
@@ -583,8 +617,8 @@
                     <h3 className="text-xl sm:text-2xl font-bold">Shows de Aguas Danzantes</h3>
                   </div>
                   <p className="mb-4 text-sm sm:text-base">Horarios especiales todos los días:</p>
-                  <div className="grid grid-cols-1 sm:grid-cols-3 gap-3 sm:gap-4">
-                    {['18:00', '19:30', '21:00'].map((time, i) => (
+                  <div className="grid grid-cols-1 sm:grid-cols-2 gap-2 sm:gap-4">
+                    {['20:00', '21:00'].map((time, i) => (
                       <div key={i} className="bg-white bg-opacity-20 rounded-lg p-3 sm:p-4 text-center">
                         <div className="text-2xl sm:text-3xl font-bold mb-1">{time}</div>
                         <div className="text-xs sm:text-sm">{i === 0 ? 'Primera' : i === 1 ? 'Segunda' : 'Función especial'} función</div>
@@ -669,6 +703,8 @@
 
                   <div className="max-w-4xl mx-auto">
                     <div className="p-8 rounded-xl shadow-lg text-white" style={{ backgroundColor: '#8f3a82' }}>
+
+                      {/* Primera Imagen */}
                       <div className="bg-white bg-opacity-10 rounded-lg overflow-hidden mb-6">
                         <img
                           src="/normativa.jpg"
@@ -681,9 +717,21 @@
                           }}
                         />
                       </div>
-
+                      {/* Segunda Imagen */}
+                      <div className="bg-white bg-opacity-10 rounded-lg overflow-hidden mb-6">
+                        <img
+                          src="/normativa2.jpg"
+                          alt="Normativas adicionales del Parque de la Familia"
+                          className="w-full h-auto"
+                          onError={(e) => {
+                            e.target.style.display = 'none';
+                            e.target.parentElement.innerHTML = '<div class="w-full h-64 flex items-center justify-center bg-white bg-opacity-10"><i data-lucide="info" class="w-20 h-20 text-white opacity-50"></i></div>';
+                            lucide.createIcons();
+                          }}
+                        />
+                      </div>
                       {/* Normativas en Texto */}
-                      <div className="mt-8">
+                      <div className="mt-8 mb-8">
                         <h3 className="text-2xl font-bold mb-6 text-center">Normas Importantes</h3>
                         <div className="grid md:grid-cols-2 gap-6">
                           <div className="space-y-3">
@@ -694,10 +742,6 @@
                             <div className="flex items-start gap-3">
                               <i data-lucide="check-circle" className="w-5 h-5 flex-shrink-0 mt-1" style={{ color: '#37a9ad' }}></i>
                               <p className="text-sm">Respetar los horarios de funcionamiento</p>
-                            </div>
-                            <div className="flex items-start gap-3">
-                              <i data-lucide="check-circle" className="w-5 h-5 flex-shrink-0 mt-1" style={{ color: '#37a9ad' }}></i>
-                              <p className="text-sm">Mascotas permitidas con correa</p>
                             </div>
                             <div className="flex items-start gap-3">
                               <i data-lucide="check-circle" className="w-5 h-5 flex-shrink-0 mt-1" style={{ color: '#37a9ad' }}></i>
@@ -732,6 +776,8 @@
                           </div>
                         </div>
                       </div>
+
+
 
                       <p className="text-center text-sm mt-8 opacity-90">
                         Por favor, respeta nuestras normas para mantener un ambiente seguro y agradable para todos
