--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
           { type: 'image', url: '/actividad2.jpg' },
           { type: 'image', url: '/actividad3.jpg' },
           { type: 'image', url: '/actividad4.jpg' },
+          { type: 'image', url: '/actividad5.jpg' }
           ],
           whatsapp: WHATSAPP_NUMBER,
           color: 'orange'
