--- a/index.html
+++ b/index.html
@@ -902,7 +902,7 @@
                     <a href="https://www.facebook.com/profile.php?id=61583953421561" target="_blank" rel="noopener noreferrer" className="text-gray-400 hover:text-white transition-colors" aria-label="Facebook">
                       <i data-lucide="facebook" className="w-6 h-6"></i>
                     </a>
-                    <a href="https://instagram.com" target="_blank" rel="noopener noreferrer" className="text-gray-400 hover:text-white transition-colors" aria-label="Instagram">
+                    <a href="https://www.instagram.com/emav.ra4/" target="_blank" rel="noopener noreferrer" className="text-gray-400 hover:text-white transition-colors" aria-label="Instagram">
                       <i data-lucide="instagram" className="w-6 h-6"></i>
                     </a>
                     <a href="https://www.tiktok.com/@parquedelafamiliaoficia1?is_from_webapp=1&sender_device=pc" target="_blank" rel="noopener noreferrer" className="text-gray-400 hover:text-white transition-colors" aria-label="TikTok">
